| Summary: | ASTERISK-29379: Segfault - ast_channel_is_multistream (chan=0x0) at channel_internal_api.c:1590 | ||||
| Reporter: | Ross Beer (rossbeer) | Labels: | |||
| Date Opened: | 2021-04-01 12:46:14 | Date Closed: | 2021-04-05 07:49:14 | ||
| Priority: | Minor | Regression? | |||
| Status: | Closed/Complete | Components: | Bridges/bridge_simple | ||
| Versions: | GIT | Frequency of Occurrence | Occasional | ||
| Related Issues: |
| ||||
| Environment: | Centos 7 | Attachments: | ( 0) core-asterisk-143923-1617283024-thread1.txt | ||
| Description: | Segfault in ast_channel_is_multistream (chan=0x0) at channel_internal_api.c:1590 while performing an attended transfer | ||||
| Comments: | By: Asterisk Team (asteriskteam) 2021-04-01 12:46:16.522-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2021-04-05 07:49:17.471-0500 Change 15726 merged by Friendly Automation: bridge_channel_write_frame: Check for NULL channel [https://gerrit.asterisk.org/c/asterisk/+/15726|https://gerrit.asterisk.org/c/asterisk/+/15726] By: Friendly Automation (friendly-automation) 2021-04-05 07:50:34.254-0500 Change 15742 merged by Friendly Automation: bridge_channel_write_frame: Check for NULL channel [https://gerrit.asterisk.org/c/asterisk/+/15742|https://gerrit.asterisk.org/c/asterisk/+/15742] By: Friendly Automation (friendly-automation) 2021-04-05 07:52:44.494-0500 Change 15743 merged by Joshua Colp: bridge_channel_write_frame: Check for NULL channel [https://gerrit.asterisk.org/c/asterisk/+/15743|https://gerrit.asterisk.org/c/asterisk/+/15743] | ||||